<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_bg"
    android:id="@+id/detail_activity"
    tools:context=".ui.detail.DetailFilmActivity">

    <ProgressBar
        android:id="@+id/pb_detail"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />

    </com.google.android.material.appbar.AppBarLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:contentDescription="@string/poster_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="155dp" />

        <TextView
            android:id="@+id/desc_title"
            style="@style/TextDetail.Description"
            android:text="@string/title_film"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/img_detail" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/desc_title"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/desc_released"
            style="@style/TextDetail.Description"
            android:layout_marginTop="4dp"
            android:text="@string/date_film"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_date"
            style="@style/TextDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/desc_released"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/desc_rate"
            style="@style/TextDetail.Description"
            android:layout_marginTop="4dp"
            android:text="@string/episodes_film"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_date" />

        <TextView
            android:id="@+id/tv_rate"
            style="@style/TextDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/desc_rate"
            tools:text="@tools:sample/full_names" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="236dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/desc_overview"
            style="@style/TextDetail.Description"
            android:layout_marginTop="4dp"
            android:text="@string/overview_film"
            app:layout_constraintStart_toStartOf="@id/img_detail"
            app:layout_constraintTop_toBottomOf="@id/guideline2" />

        <TextView
            android:id="@+id/tv_overview"
            style="@style/TextDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/img_detail"
            app:layout_constraintTop_toBottomOf="@id/desc_overview"
            tools:text="@tools:sample/full_names" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>